# fake-news-generat0r

./: .env.example  .gitignore  .markdownlint.json  .markdownlintignore  CLAUDE.md  Makefile  README.md  context.md  docker-compose.ci.yml  docker-compose.yml  future_work.md  github-config-snapshot.md  tracker.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: arq_client.py  config.py  db.py  exceptions.py  logging_config.py  main.py  models.py  redis_client.py  sources.py
backend/app/routers/: articles.py  chat.py  health.py  scrape.py
backend/app/schemas/: articles.py  chat.py  health.py  scrape.py
backend/app/services/: articles.py  chat.py  chat_generator.py  chat_llm.py  dedup.py  embedding.py  openai_transform.py  sanitize.py  scraper.py  transformer.py
backend/app/workers/: transform.py
backend/migrations/: env.py
backend/migrations/versions/: 3602d7a39bfe_chat_messages.py  a1b2c3d4e5f6_articles_description_not_null.py  a1b2c3d4e5f6_dedup_pgvector_and_embeddings.py  cfe2a836394a_initial_schema.py
backend/tests/: conftest.py  test_config.py
backend/tests/integration/: _helpers.py  conftest.py  test_alembic_bootstrap.py  test_compose_topology.py  test_config_and_secrets.py  test_frontend_dev_server.py  test_health_endpoint.py
backend/tests/routers/: test_articles.py  test_chat.py  test_health.py  test_scrape.py
backend/tests/unit/: test_articles_service.py  test_chat_generator.py  test_chat_llm.py  test_chat_migration.py  test_chat_models.py  test_chat_service.py  test_dedup_classifier.py  test_dedup_cosine.py  test_embedding.py  (+12 more)
(+128 files in other folders)
