[project]
name = "fake-news-generator-backend"
version = "0.1.0"
description = "Fake news generator — FastAPI backend + ARQ worker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29",
    "redis>=5.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "alembic>=1.13",
    "arq>=0.25",
    "httpx>=0.27",
    "feedparser>=6.0",
    "openai>=1.54",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "black>=24.10",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
